[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/GeneralInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Ennemi2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Combat2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Ennemi2.gd" type="Script" id=4]
[ext_resource path="res://Scenes/DialogueInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/FondNormal.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Combat2" type="Node"]
script = ExtResource( 3 )

[node name="Decor" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 6 )

[node name="Ennemi2" type="AnimatedSprite" parent="."]
position = Vector2( 647, 302 )
frames = SubResource( 1 )
script = ExtResource( 4 )

[node name="GeneralInterface" parent="." instance=ExtResource( 1 )]

[node name="DialogueInterface" parent="." instance=ExtResource( 5 )]
visible = false

[node name="TimerActions" type="Timer" parent="."]
one_shot = true
